Extensions categories have layout issues for RTL lang

--- a/src/amo/components/Categories.scss
+++ b/src/amo/components/Categories.scss
@@ -17,4 +17,8 @@
   display: block;
   padding: 1em 0;
   text-decoration: none;
+
+  [dir=rtl] & {
+    padding-right: 1em;
+  }
 }
